Fix side nav on mobile
- top margin added for when side nav sits below main page content

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -64,7 +64,11 @@ main {
 }
 
 .govuk-taxonomy-sidebar {
-  margin-top: 0px;
+  margin-top: $gutter;
+
+  @include media(tablet) {
+    margin-top: 0px;
+  }
 }
 
 .task-list {
